# jean

./: package.json
.github/workflows/: release.yml
docs/developer/: build-performance.md  troubleshooting.md
scripts/: appimage-webkit-fix.sh  build-appimage.sh  tauri-dev-with-web-access.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/browser/: registry.rs
src-tauri/src/chat/: claude.rs  codex.rs  commands.rs  mod.rs  opencode.rs  run_log.rs  storage.rs  types.rs
src-tauri/src/claude_cli/: commands.rs  config.rs
src-tauri/src/cli_update/: mod.rs
src-tauri/src/codex_cli/: commands.rs  config.rs
src-tauri/src/gh_cli/: commands.rs  config.rs
src-tauri/src/http_server/: dispatch.rs  mod.rs  websocket.rs
src-tauri/src/opencode_cli/: commands.rs  config.rs
src-tauri/src/platform/: process.rs
src-tauri/src/projects/: commands.rs  git.rs  github_actions.rs  github_issues.rs  types.rs
src-tauri/src/terminal/: commands.rs  pty.rs
src/components/browser/: BrowserTabContent.tsx  BrowserToolbar.tsx  BrowserView.tsx  ModalBrowserDrawer.tsx  default-tab-url.ts
src/components/chat/: ChatInput.tsx  ChatSearchBar.tsx  ChatToolbar.tsx  ChatWindow.tsx  CodexCommandApprovalRequest.tsx  CodexDynamicToolCallRequest.tsx  CodexGoalBanner.tsx  CodexPermissionsRequest.tsx  CompactMessageList.tsx  CompactStreamingTicker.tsx  EditedFilesDisplay.tsx  FileEditsDiffModal.tsx  FileMentionPopover.tsx  InlineFileDiff.tsx  MessageItem.test.tsx  MessageItem.tsx  MessageList.tsx  PlanFileDisplay.tsx  QueuedMessageItem.tsx  RecentContexts.tsx  ReviewMethodModal.tsx  SessionChatModal.tsx  SessionListRow.tsx  SlashPopover.tsx  StreamingMessage.tsx  StreamingStatusBar.tsx  ThinkingBlock.tsx  ToolCallInline.test.tsx  ToolCallInline.tsx  VirtualizedMessageList.tsx  WorktreeCanvasView.tsx  WorktreeSetupCard.tsx  session-card-utils.test.ts  session-card-utils.tsx  time-utils.test.ts  time-utils.ts
src/components/chat/hooks/: useCanvasShortcutEvents.ts  useCanvasStoreState.ts  (+11 more)
src/components/command-palette/: CommandPalette.tsx
src/components/dashboard/: ProjectCanvasView.tsx
src/components/layout/: MainWindow.tsx
src/components/magic/: LoadContextModal.tsx  MagicModal.tsx  ResolveConflictsDialog.tsx  ReviewCommentsDialog.tsx
src/components/onboarding/: CliSetupComponents.tsx  JeanConfigWizard.tsx  OnboardingDialog.tsx
src/components/open-in/: OpenInModal.tsx
src/components/preferences/: CliLoginModal.tsx  PreferencesDialog.test.tsx  PreferencesDialog.tsx  preferences-search.ts
src/components/projects/: ProjectTree.tsx  ProjectTreeItem.tsx  WorktreeContextMenu.tsx  WorktreeDropdownMenu.tsx  WorktreeItem.tsx  useWorktreeMenuActions.tsx
src/components/shared/: FailedRunsBadge.tsx  WorkflowRunsModal.tsx
src/components/titlebar/: TitleBar.tsx
src/components/ui/: ErrorBoundary.tsx  backend-label.tsx  floating-dock.tsx  markdown.tsx
src/components/unread/: UnreadBell.tsx
src/components/worktree/: BranchConflictDialog.tsx  IssuePreviewModal.tsx  QuickActionsTab.tsx
src/hooks/: use-touch-device.ts  useAutoArchiveOnMerge.ts  useBrowserPane.ts  useCliVersionCheck.ts  useMainWindowEventListeners.ts  useQueueProcessor.ts  useUIStatePersistence.ts  useWorktreeTerminalStatus.tsx
src/lib/: model-utils.ts  terminal-instances.ts  transport.ts
src/services/: chat.ts  claude-cli.ts  codex-cli.ts  gh-cli.ts  github.ts  opencode-cli.ts  preferences.test.ts  projects.ts  skills.ts
src/store/: browser-store.ts  chat-store.ts  projects-store.ts  terminal-store.ts  ui-store.ts
src/types/: chat.ts  github.ts  keybindings.ts  preferences.ts  projects.ts  ui-state.ts
(+22 files in other folders)
