[package]
name = "jean"
version = "0.1.48"
description = "Jean - AI Assistant"
authors = ["Andras Bacsai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "unstable", "webview-data-url"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
log = "0.4"
base64 = "0.22"
regex = "1.11.1"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
rand = "0.8"
dirs = "5.0"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"       # For SHA256 checksum verification of CLI binary
ignore = "0.4"  # For .gitignore-respecting file traversal
zip = "2.2"      # For extracting zip archives (gh CLI on macOS/Windows)
flate2 = "1.0"   # For gzip decompression (gh CLI on Linux)
tar = "0.4"      # For tar archive extraction (gh CLI on Linux)
portable-pty = "0.8"  # For terminal/PTY support
which = "7"           # For cross-platform executable detection
axum = { version = "0.8", features = ["ws"] }  # HTTP server + WebSocket
tower-http = { version = "0.6", features = ["cors", "fs", "compression-br", "compression-gzip"] }  # CORS + static files + response compression
tokio = { version = "1", features = ["sync", "macros"] }  # Channel for WS broadcast
futures-util = "0.3"  # Stream utilities for WebSocket split
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }  # Image resize/compression on paste
arboard = { version = "3", features = ["wayland-data-control"] }  # Native clipboard image read (Linux WebKitGTK fallback)
if-addrs = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols

# Fast local release profile — for testing release builds without distribution-grade size optimization.
# Use via: bun run tauri:build:fast
[profile.release-fast]
inherits = "release"
codegen-units = 16       # Parallel codegen (was 1)
lto = "thin"             # Thin LTO (was fat) — much faster link
opt-level = 2            # Speed-tuned, drops size-optimizer passes
strip = "debuginfo"      # Keep symbols for crash reports, drop debuginfo
incremental = true       # Reuse compilation across local rebuilds

[dev-dependencies]
tempfile = "3.23.0"
